# coggitmlops

./: pyproject.toml
TrainingFT.egg-info/: PKG-INFO  SOURCES.txt
gitenv/: pyvenv.cfg
src/TrainingFT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/azuremlapp/: .env
src/azuremlapp/resources/: fraud_detection_data_100.csv
src/azuremlapp/utils/: fraud_train.py
